tests/NormalTests/paczka1/small_fuzzy/82142802.err
Error in line 1: jJrs7YniRMc A360 67,1
Error in line 3: jJrs7YniRMc A53 23,8
